interp_frontend/src/Collabrate_For_Grades/InterFrontEnd/Interp_CSharp/InterpParser.cs
// $ANTLR 3.1.3 Mar 18, 2009 10:09:25 Interp.g 2009-11-02 12:44:46


using System.Collections.Generic;


using System;
using Antlr.Runtime;
using IList 		= System.Collections.IList;
using ArrayList 	= System.Collections.ArrayList;
using Stack 		= Antlr.Runtime.Collections.StackList;



using Antlr.Runtime.Tree;

public class InterpParser : Parser 
{
    public static readonly string[] tokenNames = new string[] 
	{
        "<invalid>", 
		"<EOR>", 
		"<DOWN>", 
		"<UP>", 
		"ASSIGNMENT", 
		"END_OF_STATEMENT", 
		"INT_LITERAL", 
		"DOUBLE_LITERAL", 
		"VARIABLE", 
		"VARTYPE", 
		"STRINGTYPE", 
		"PLUS", 
		"MULTIPLY", 
		"WHITESPACE", 
		"'Matrix'", 
		"'<'", 
		"'>'", 
		"'['", 
		"']'", 
		"','", 
		"'Vector'", 
		"'Struct'", 
		"'{'", 
		"'}'", 
		"'.'", 
		"'delete'", 
		"'print'"
    };

    public const int INT_LITERAL = 6;
    public const int T__26 = 26;
    public const int T__25 = 25;
    public const int T__24 = 24;
    public const int T__23 = 23;
    public const int T__22 = 22;
    public const int T__21 = 21;
    public const int T__20 = 20;
    public const int DOUBLE_LITERAL = 7;
    public const int WHITESPACE = 13;
    public const int EOF = -1;
    public const int VARTYPE = 9;
    public const int T__19 = 19;
    public const int T__16 = 16;
    public const int T__15 = 15;
    public const int VARIABLE = 8;
    public const int T__18 = 18;
    public const int T__17 = 17;
    public const int MULTIPLY = 12;
    public const int T__14 = 14;
    public const int STRINGTYPE = 10;
    public const int PLUS = 11;
    public const int ASSIGNMENT = 4;
    public const int END_OF_STATEMENT = 5;

    // delegates
    // delegators



        public InterpParser(ITokenStream input)
    		: this(input, new RecognizerSharedState()) {
        }

        public InterpParser(ITokenStream input, RecognizerSharedState state)
    		: base(input, state) {
            InitializeCyclicDFAs();

             
       }
        
    protected ITreeAdaptor adaptor = new CommonTreeAdaptor();

    public ITreeAdaptor TreeAdaptor
    {
        get { return this.adaptor; }
        set {
    	this.adaptor = value;
    	}
    }

    override public string[] TokenNames {
		get { return InterpParser.tokenNames; }
    }

    override public string GrammarFileName {
		get { return "Interp.g"; }
    }


    public class program_return : ParserRuleReturnScope
    {
        public List<Element> ret;
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "program"
    // Interp.g:29:1: program returns [List<Element> ret] : ( expr )+ ;
    public InterpParser.program_return program() // throws RecognitionException [1]
    {   
        InterpParser.program_return retval = new InterpParser.program_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        InterpParser.expr_return expr1 = null;




          retval.ret = new List<Element>();

        try 
    	{
            // Interp.g:33:3: ( ( expr )+ )
            // Interp.g:33:5: ( expr )+
            {
            	root_0 = (object)adaptor.GetNilNode();

            	// Interp.g:33:5: ( expr )+
            	int cnt1 = 0;
            	do 
            	{
            	    int alt1 = 2;
            	    int LA1_0 = input.LA(1);

            	    if ( ((LA1_0 >= VARIABLE && LA1_0 <= STRINGTYPE) || LA1_0 == 14 || (LA1_0 >= 20 && LA1_0 <= 21) || (LA1_0 >= 25 && LA1_0 <= 26)) )
            	    {
            	        alt1 = 1;
            	    }


            	    switch (alt1) 
            		{
            			case 1 :
            			    // Interp.g:33:6: expr
            			    {
            			    	PushFollow(FOLLOW_expr_in_program74);
            			    	expr1 = expr();
            			    	state.followingStackPointer--;

            			    	adaptor.AddChild(root_0, expr1.Tree);
            			    	retval.ret.Add(((expr1 != null) ? expr1.ret : null)); 

            			    }
            			    break;

            			default:
            			    if ( cnt1 >= 1 ) goto loop1;
            		            EarlyExitException eee1 =
            		                new EarlyExitException(1, input);
            		            throw eee1;
            	    }
            	    cnt1++;
            	} while (true);

            	loop1:
            		;	// Stops C# compiler whining that label 'loop1' has no statements


            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "program"

    public class expr_return : ParserRuleReturnScope
    {
        public Element ret;
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "expr"
    // Interp.g:34:1: expr returns [Element ret] : ( assignment | scalarvardec | vectorvardec | matrixvardec | deletionofvar | structdec | structobjdec | print );
    public InterpParser.expr_return expr() // throws RecognitionException [1]
    {   
        InterpParser.expr_return retval = new InterpParser.expr_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        InterpParser.assignment_return assignment2 = null;

        InterpParser.scalarvardec_return scalarvardec3 = null;

        InterpParser.vectorvardec_return vectorvardec4 = null;

        InterpParser.matrixvardec_return matrixvardec5 = null;

        InterpParser.deletionofvar_return deletionofvar6 = null;

        InterpParser.structdec_return structdec7 = null;

        InterpParser.structobjdec_return structobjdec8 = null;

        InterpParser.print_return print9 = null;



        try 
    	{
            // Interp.g:35:3: ( assignment | scalarvardec | vectorvardec | matrixvardec | deletionofvar | structdec | structobjdec | print )
            int alt2 = 8;
            alt2 = dfa2.Predict(input);
            switch (alt2) 
            {
                case 1 :
                    // Interp.g:35:5: assignment
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_assignment_in_expr92);
                    	assignment2 = assignment();
                    	state.followingStackPointer--;

                    	adaptor.AddChild(root_0, assignment2.Tree);
                    	retval.ret = ((assignment2 != null) ? assignment2.ret : null);

                    }
                    break;
                case 2 :
                    // Interp.g:36:5: scalarvardec
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_scalarvardec_in_expr100);
                    	scalarvardec3 = scalarvardec();
                    	state.followingStackPointer--;

                    	adaptor.AddChild(root_0, scalarvardec3.Tree);
                    	 retval.ret = ((scalarvardec3 != null) ? scalarvardec3.ret : null);

                    }
                    break;
                case 3 :
                    // Interp.g:37:5: vectorvardec
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_vectorvardec_in_expr108);
                    	vectorvardec4 = vectorvardec();
                    	state.followingStackPointer--;

                    	adaptor.AddChild(root_0, vectorvardec4.Tree);
                    	 retval.ret = ((vectorvardec4 != null) ? vectorvardec4.ret : null);

                    }
                    break;
                case 4 :
                    // Interp.g:38:5: matrixvardec
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_matrixvardec_in_expr116);
                    	matrixvardec5 = matrixvardec();
                    	state.followingStackPointer--;

                    	adaptor.AddChild(root_0, matrixvardec5.Tree);
                    	 retval.ret = ((matrixvardec5 != null) ? matrixvardec5.ret : null);

                    }
                    break;
                case 5 :
                    // Interp.g:39:5: deletionofvar
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_deletionofvar_in_expr124);
                    	deletionofvar6 = deletionofvar();
                    	state.followingStackPointer--;

                    	adaptor.AddChild(root_0, deletionofvar6.Tree);
                    	 retval.ret = ((deletionofvar6 != null) ? deletionofvar6.ret : null);

                    }
                    break;
                case 6 :
                    // Interp.g:40:5: structdec
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_structdec_in_expr132);
                    	structdec7 = structdec();
                    	state.followingStackPointer--;

                    	adaptor.AddChild(root_0, structdec7.Tree);
                    	retval.ret = ((structdec7 != null) ? structdec7.ret : null);

                    }
                    break;
                case 7 :
                    // Interp.g:41:5: structobjdec
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_structobjdec_in_expr140);
                    	structobjdec8 = structobjdec();
                    	state.followingStackPointer--;

                    	adaptor.AddChild(root_0, structobjdec8.Tree);
                    	 retval.ret = ((structobjdec8 != null) ? structobjdec8.ret : null);

                    }
                    break;
                case 8 :
                    // Interp.g:42:5: print
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_print_in_expr148);
                    	print9 = print();
                    	state.followingStackPointer--;

                    	adaptor.AddChild(root_0, print9.Tree);
                    	 retval.ret = ((print9 != null) ? print9.ret : null); 

                    }
                    break;

            }
            retval.Stop = input.LT(-1);

            	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "expr"

    public class assignment_return : ParserRuleReturnScope
    {
        public AssignmentOperationElement ret;
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "assignment"
    // Interp.g:44:1: assignment returns [AssignmentOperationElement ret] : ( variable | structassign ) ASSIGNMENT ( var_int_or_double_literal | addition | multiplication ) END_OF_STATEMENT ;
    public InterpParser.assignment_return assignment() // throws RecognitionException [1]
    {   
        InterpParser.assignment_return retval = new InterpParser.assignment_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        IToken ASSIGNMENT12 = null;
        IToken END_OF_STATEMENT16 = null;
        InterpParser.variable_return variable10 = null;

        InterpParser.structassign_return structassign11 = null;

        InterpParser.var_int_or_double_literal_return var_int_or_double_literal13 = null;

        InterpParser.addition_return addition14 = null;

        InterpParser.multiplication_return multiplication15 = null;


        object ASSIGNMENT12_tree=null;
        object END_OF_STATEMENT16_tree=null;


          retval.ret = new AssignmentOperationElement();

        try 
    	{
            // Interp.g:48:3: ( ( variable | structassign ) ASSIGNMENT ( var_int_or_double_literal | addition | multiplication ) END_OF_STATEMENT )
            // Interp.g:48:5: ( variable | structassign ) ASSIGNMENT ( var_int_or_double_literal | addition | multiplication ) END_OF_STATEMENT
            {
            	root_0 = (object)adaptor.GetNilNode();

            	// Interp.g:48:5: ( variable | structassign )
            	int alt3 = 2;
            	int LA3_0 = input.LA(1);

            	if ( (LA3_0 == VARIABLE) )
            	{
            	    int LA3_1 = input.LA(2);

            	    if ( (LA3_1 == 24) )
            	    {
            	        alt3 = 2;
            	    }
            	    else if ( (LA3_1 == ASSIGNMENT) )
            	    {
            	        alt3 = 1;
            	    }
            	    else 
            	    {
            	        NoViableAltException nvae_d3s1 =
            	            new NoViableAltException("", 3, 1, input);

            	        throw nvae_d3s1;
            	    }
            	}
            	else 
            	{
            	    NoViableAltException nvae_d3s0 =
            	        new NoViableAltException("", 3, 0, input);

            	    throw nvae_d3s0;
            	}
            	switch (alt3) 
            	{
            	    case 1 :
            	        // Interp.g:48:6: variable
            	        {
            	        	PushFollow(FOLLOW_variable_in_assignment170);
            	        	variable10 = variable();
            	        	state.followingStackPointer--;

            	        	adaptor.AddChild(root_0, variable10.Tree);
            	        	retval.ret.setLhs(((variable10 != null) ? variable10.ret : null)); 

            	        }
            	        break;
            	    case 2 :
            	        // Interp.g:49:5: structassign
            	        {
            	        	PushFollow(FOLLOW_structassign_in_assignment178);
            	        	structassign11 = structassign();
            	        	state.followingStackPointer--;

            	        	adaptor.AddChild(root_0, structassign11.Tree);
            	        	retval.ret.setStructLhs(((structassign11 != null) ? structassign11.ret : null));

            	        }
            	        break;

            	}

            	ASSIGNMENT12=(IToken)Match(input,ASSIGNMENT,FOLLOW_ASSIGNMENT_in_assignment185); 
            		ASSIGNMENT12_tree = (object)adaptor.Create(ASSIGNMENT12);
            		adaptor.AddChild(root_0, ASSIGNMENT12_tree);

            	// Interp.g:51:5: ( var_int_or_double_literal | addition | multiplication )
            	int alt4 = 3;
            	switch ( input.LA(1) ) 
            	{
            	case VARIABLE:
            		{
            	    switch ( input.LA(2) ) 
            	    {
            	    case END_OF_STATEMENT:
            	    	{
            	        alt4 = 1;
            	        }
            	        break;
            	    case MULTIPLY:
            	    	{
            	        alt4 = 3;
            	        }
            	        break;
            	    case PLUS:
            	    	{
            	        alt4 = 2;
            	        }
            	        break;
            	    	default:
            	    	    NoViableAltException nvae_d4s1 =
            	    	        new NoViableAltException("", 4, 1, input);

            	    	    throw nvae_d4s1;
            	    }

            	    }
            	    break;
            	case INT_LITERAL:
            		{
            	    switch ( input.LA(2) ) 
            	    {
            	    case PLUS:
            	    	{
            	        alt4 = 2;
            	        }
            	        break;
            	    case END_OF_STATEMENT:
            	    	{
            	        alt4 = 1;
            	        }
            	        break;
            	    case MULTIPLY:
            	    	{
            	        alt4 = 3;
            	        }
            	        break;
            	    	default:
            	    	    NoViableAltException nvae_d4s2 =
            	    	        new NoViableAltException("", 4, 2, input);

            	    	    throw nvae_d4s2;
            	    }

            	    }
            	    break;
            	case DOUBLE_LITERAL:
            		{
            	    switch ( input.LA(2) ) 
            	    {
            	    case MULTIPLY:
            	    	{
            	        alt4 = 3;
            	        }
            	        break;
            	    case PLUS:
            	    	{
            	        alt4 = 2;
            	        }
            	        break;
            	    case END_OF_STATEMENT:
            	    	{
            	        alt4 = 1;
            	        }
            	        break;
            	    	default:
            	    	    NoViableAltException nvae_d4s3 =
            	    	        new NoViableAltException("", 4, 3, input);

            	    	    throw nvae_d4s3;
            	    }

            	    }
            	    break;
            		default:
            		    NoViableAltException nvae_d4s0 =
            		        new NoViableAltException("", 4, 0, input);

            		    throw nvae_d4s0;
            	}

            	switch (alt4) 
            	{
            	    case 1 :
            	        // Interp.g:51:6: var_int_or_double_literal
            	        {
            	        	PushFollow(FOLLOW_var_int_or_double_literal_in_assignment193);
            	        	var_int_or_double_literal13 = var_int_or_double_literal();
            	        	state.followingStackPointer--;

            	        	adaptor.AddChild(root_0, var_int_or_double_literal13.Tree);
            	        	retval.ret.setRhs(((var_int_or_double_literal13 != null) ? var_int_or_double_literal13.ret : null)); 

            	        }
            	        break;
            	    case 2 :
            	        // Interp.g:52:7: addition
            	        {
            	        	PushFollow(FOLLOW_addition_in_assignment203);
            	        	addition14 = addition();
            	        	state.followingStackPointer--;

            	        	adaptor.AddChild(root_0, addition14.Tree);
            	        	retval.ret.setRhs(((addition14 != null) ? addition14.ret : null));

            	        }
            	        break;
            	    case 3 :
            	        // Interp.g:53:7: multiplication
            	        {
            	        	PushFollow(FOLLOW_multiplication_in_assignment213);
            	        	multiplication15 = multiplication();
            	        	state.followingStackPointer--;

            	        	adaptor.AddChild(root_0, multiplication15.Tree);
            	        	retval.ret.setRhs(((multiplication15 != null) ? multiplication15.ret : null));

            	        }
            	        break;

            	}

            	END_OF_STATEMENT16=(IToken)Match(input,END_OF_STATEMENT,FOLLOW_END_OF_STATEMENT_in_assignment223); 
            		END_OF_STATEMENT16_tree = (object)adaptor.Create(END_OF_STATEMENT16);
            		adaptor.AddChild(root_0, END_OF_STATEMENT16_tree);


            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "assignment"

    public class var_int_or_double_literal_return : ParserRuleReturnScope
    {
        public Element ret;
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "var_int_or_double_literal"
    // Interp.g:56:1: var_int_or_double_literal returns [Element ret] : ( variable | int_literal | double_literal ) ;
    public InterpParser.var_int_or_double_literal_return var_int_or_double_literal() // throws RecognitionException [1]
    {   
        InterpParser.var_int_or_double_literal_return retval = new InterpParser.var_int_or_double_literal_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        InterpParser.variable_return variable17 = null;

        InterpParser.int_literal_return int_literal18 = null;

        InterpParser.double_literal_return double_literal19 = null;



        try 
    	{
            // Interp.g:57:3: ( ( variable | int_literal | double_literal ) )
            // Interp.g:57:6: ( variable | int_literal | double_literal )
            {
            	root_0 = (object)adaptor.GetNilNode();

            	// Interp.g:57:6: ( variable | int_literal | double_literal )
            	int alt5 = 3;
            	switch ( input.LA(1) ) 
            	{
            	case VARIABLE:
            		{
            	    alt5 = 1;
            	    }
            	    break;
            	case INT_LITERAL:
            		{
            	    alt5 = 2;
            	    }
            	    break;
            	case DOUBLE_LITERAL:
            		{
            	    alt5 = 3;
            	    }
            	    break;
            		default:
            		    NoViableAltException nvae_d5s0 =
            		        new NoViableAltException("", 5, 0, input);

            		    throw nvae_d5s0;
            	}

            	switch (alt5) 
            	{
            	    case 1 :
            	        // Interp.g:57:7: variable
            	        {
            	        	PushFollow(FOLLOW_variable_in_var_int_or_double_literal239);
            	        	variable17 = variable();
            	        	state.followingStackPointer--;

            	        	adaptor.AddChild(root_0, variable17.Tree);
            	        	 retval.ret = ((variable17 != null) ? variable17.ret : null); 

            	        }
            	        break;
            	    case 2 :
            	        // Interp.g:58:7: int_literal
            	        {
            	        	PushFollow(FOLLOW_int_literal_in_var_int_or_double_literal250);
            	        	int_literal18 = int_literal();
            	        	state.followingStackPointer--;

            	        	adaptor.AddChild(root_0, int_literal18.Tree);
            	        	retval.ret = ((int_literal18 != null) ? int_literal18.ret : null); 

            	        }
            	        break;
            	    case 3 :
            	        // Interp.g:59:7: double_literal
            	        {
            	        	PushFollow(FOLLOW_double_literal_in_var_int_or_double_literal260);
            	        	double_literal19 = double_literal();
            	        	state.followingStackPointer--;

            	        	adaptor.AddChild(root_0, double_literal19.Tree);
            	        	retval.ret = ((double_literal19 != null) ? double_literal19.ret : null);

            	        }
            	        break;

            	}


            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "var_int_or_double_literal"

    public class int_literal_return : ParserRuleReturnScope
    {
        public IntegerElement ret;
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "int_literal"
    // Interp.g:61:1: int_literal returns [IntegerElement ret] : el1= INT_LITERAL ;
    public InterpParser.int_literal_return int_literal() // throws RecognitionException [1]
    {   
        InterpParser.int_literal_return retval = new InterpParser.int_literal_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        IToken el1 = null;

        object el1_tree=null;


          retval.ret = new IntegerElement();

        try 
    	{
            // Interp.g:65:3: (el1= INT_LITERAL )
            // Interp.g:65:5: el1= INT_LITERAL
            {
            	root_0 = (object)adaptor.GetNilNode();

            	el1=(IToken)Match(input,INT_LITERAL,FOLLOW_INT_LITERAL_in_int_literal286); 
            		el1_tree = (object)adaptor.Create(el1);
            		adaptor.AddChild(root_0, el1_tree);

            	 retval.ret.setText(((el1 != null) ? el1.Text : null)); 

            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "int_literal"

    public class double_literal_return : ParserRuleReturnScope
    {
        public DoubleElement ret;
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "double_literal"
    // Interp.g:67:1: double_literal returns [DoubleElement ret] : el1= DOUBLE_LITERAL ;
    public InterpParser.double_literal_return double_literal() // throws RecognitionException [1]
    {   
        InterpParser.double_literal_return retval = new InterpParser.double_literal_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        IToken el1 = null;

        object el1_tree=null;


        	retval.ret = new DoubleElement();
        	
        try 
    	{
            // Interp.g:71:2: (el1= DOUBLE_LITERAL )
            // Interp.g:72:3: el1= DOUBLE_LITERAL
            {
            	root_0 = (object)adaptor.GetNilNode();

            	el1=(IToken)Match(input,DOUBLE_LITERAL,FOLLOW_DOUBLE_LITERAL_in_double_literal310); 
            		el1_tree = (object)adaptor.Create(el1);
            		adaptor.AddChild(root_0, el1_tree);

            	retval.ret.setText(((el1 != null) ? el1.Text : null));

            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "double_literal"

    public class variable_return : ParserRuleReturnScope
    {
        public VariableElement ret;
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "variable"
    // Interp.g:74:1: variable returns [VariableElement ret] : VARIABLE ;
    public InterpParser.variable_return variable() // throws RecognitionException [1]
    {   
        InterpParser.variable_return retval = new InterpParser.variable_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        IToken VARIABLE20 = null;

        object VARIABLE20_tree=null;


          retval.ret = new VariableElement();

        try 
    	{
            // Interp.g:78:3: ( VARIABLE )
            // Interp.g:78:5: VARIABLE
            {
            	root_0 = (object)adaptor.GetNilNode();

            	VARIABLE20=(IToken)Match(input,VARIABLE,FOLLOW_VARIABLE_in_variable334); 
            		VARIABLE20_tree = (object)adaptor.Create(VARIABLE20);
            		adaptor.AddChild(root_0, VARIABLE20_tree);

            	retval.ret.setText(((VARIABLE20 != null) ? VARIABLE20.Text : null)); 

            }

            retval.Stop = input.LT(-1);
